@@ -4,7 +4,7 @@ err=1
 until [ $err == 0 ];
 do
 
-	java -Xms8m -Xmx32m -ea -Xbootclasspath/p:./libs/jsr166-1.7.0.jar -cp ./libs/*:AL-Login.jar com.aionemu.loginserver.LoginServer
+	java -Xms8m -Xmx32m -ea --add-opens java.base/sun.misc=ALL-UNNAMED -cp ./libs/*:AL-Login.jar com.aionemu.loginserver.LoginServer
 	err=$?
 	lspid=$!
 	echo ${lspid} > loginserver.pid
